--- a/index.html
+++ b/index.html
@@ -29,17 +29,30 @@
   </head>
 
   <body>
-    <div class="header row">
-      <div class="col-md-2">
-        <img id="logo" src="images/logo_alagou.png">
-      </div>
-      <div class="col-md-10">
-        <ul class="nav nav-pills">
-          <li role="presentation" class="active"><a href="#">Home</a></li>
-          <li role="presentation"><a href="#">Profile</a></li>
-          <li role="presentation"><a href="#">Messages</a></li>
-        </ul>
-      </div>
+    <div class="header row grey">
+      <nav class="navbar navbar-default navbar-static-top grey">
+        <div class="grey">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <img id="logo-mobile-menu" src="images/logo_alagou.png">
+            <!-- <a class="navbar-brand" href="#">Project name</a> -->
+          </div>
+          <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+              <li class="presentation"><a href="#">Mapa</a></li>
+              <li class="presentation"><a href="#about">Vai chover?</a></li>
+              <li><img id="logo" src="images/logo_alagou.png"></li>
+              <li class="presentation"><a href="#">Quem somos?</a></li>
+              <li class="presentation"><a href="#">Login</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </div>
     
     <!-- Mapa -->
