correção de grafia

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
 
     <div class="static-map">
-      <h3>Descubra os ponto de alagamento próximos de você</h3>
+      <h3>Descubra os pontos de alagamento próximos de você</h3>
       <input type="text" placeholder="Bairro, rua, endereço...">
       <h4><b>Mais pesquisados:</b> <b class="italic">Higienópolis | Penha | Alphaville | Lapa</b></h4>
     </div>
