--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <ul class="nav navbar-nav">
               <li class="presentation"><a href="map.html">Mapa</a></li>
               <li class="presentation"><a href="#about">Vai chover?</a></li>
-              <li><img id="logo" src="images/logo_alagou.png"></li>
+              <li><a href="index.html"><img id="logo" href="/" src="images/logo_alagou.png"></a></li>
               <li class="presentation"><a href="#">Sobre</a></li>
               <li class="presentation"><a href="#">Login</a></li>
               <li class="presentation" id="alagou"><a href="#">alagou!</a></li>
