--- a/map.html
+++ b/map.html
@@ -47,8 +47,8 @@
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
               <li class="presentation"><a href="#">Mapa</a></li>
-              <li class="presentation"><a href="#about">Vai chover?</a></li>
-              <li><img id="logo" src="images/logo_alagou.png"></li>
+              <li class="presentation"><a href="#">Vai chover?</a></li>
+              <li><a href="index.html"><img id="logo" href="/" src="images/logo_alagou.png"></a></li>
               <li class="presentation"><a href="#">Sobre</a></li>
               <li class="presentation"><a href="#">Login</a></li>
               <li class="presentation" id="alagou"><a href="#">alagou!</a></li>
