--- a/map.html
+++ b/map.html
@@ -62,7 +62,7 @@
     <div id="map"></div>
     <script src="script.js"></script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQ2acXgmsIhkEqoD1o3_ZU4rtdNP1M66I&callback=initMap">
+    src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAQ2acXgmsIhkEqoD1o3_ZU4rtdNP1M66I&callback=initMap">
     </script>
     <!-- Fim do Mapa -->
 
