--- a/index.html
+++ b/index.html
@@ -41,14 +41,13 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <img id="logo-mobile-menu" src="images/logo_alagou.png">
-            <!-- <a class="navbar-brand" href="#">Project name</a> -->
+            <img id="logo-mobile-menu" src="images/logo_alago.png">
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
               <li class="presentation"><a href="map.html">Mapa</a></li>
               <li class="presentation"><a href="#about">Vai chover?</a></li>
-              <li><a href="index.html"><img id="logo" href="/" src="images/logo_alagou.png"></a></li>
+              <li><a href="index.html"><img id="logo" href="/" src="images/logo_alago.png"></a></li>
               <li class="presentation"><a href="#">Sobre</a></li>
               <li class="presentation"><a href="#">Login</a></li>
               <li class="presentation" id="alagou"><a href="#">alagou!</a></li>
@@ -89,6 +88,32 @@
           venenatis sit amet metus nec, vulputate efficitur urna.</b>
         </div>
       </div>
+      <div class="col-md-12 app">
+        <div class="col-md-5">
+          <img id="icon" src="images/icon.png">
+          <b>Baixe nosso app</b>
+          <br>
+          <a href="#"><img class="app_store" src="images/app_store.png"></a>
+          <a href="#"><img class="play_store" src="images/play_store.png"></a>
+        </div>
+      </div>
+    </div>
+    
+    <div id="waves">
+      <script src="scripts/script_wave.js"></script>
+      <canvas id='wave' width='500' height='200'></canvas>
+      <script src="scripts/script_wave_2.js"></script>
+      <canvas id='wave2' width='500' height='200'></canvas>
+      <script src="scripts/script_wave_3.js"></script>
+      <canvas id='wave3' width='500' height='200'></canvas>
+    </div>
+    <div class="blue-band"></div>
+
+    <div class="footer row">
+      <div class="col-md-6">
+        <img class="logo" src="images/logo_alago.png">
+      </div>
+      <div class="col-md-6"></div>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
