--- a/map.html
+++ b/map.html
@@ -41,14 +41,13 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <img id="logo-mobile-menu" src="images/logo_alagou.png">
-            <!-- <a class="navbar-brand" href="#">Project name</a> -->
+            <img id="logo-mobile-menu" src="images/logo_alago.png">
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
               <li class="presentation"><a href="#">Mapa</a></li>
               <li class="presentation"><a href="#">Vai chover?</a></li>
-              <li><a href="index.html"><img id="logo" href="/" src="images/logo_alagou.png"></a></li>
+              <li><a href="index.html"><img id="logo" href="/" src="images/logo_alago.png"></a></li>
               <li class="presentation"><a href="#">Sobre</a></li>
               <li class="presentation"><a href="#">Login</a></li>
               <li class="presentation" id="alagou"><a href="#">alagou!</a></li>
@@ -60,7 +59,7 @@
     
     <!-- Mapa -->
     <div id="map"></div>
-    <script src="script.js"></script>
+    <script src="scripts/map.js"></script>
     <script async defer
     src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAQ2acXgmsIhkEqoD1o3_ZU4rtdNP1M66I&callback=initMap">
     </script>
