update de imagens e ajustes

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 
     <div class="static-map">
       <h3>Descubra os pontos de alagamento próximos de você</h3>
-      <input type="text" placeholder="Bairro, rua, endereço...">
+      <input type="text" class="searchbar" placeholder="Bairro, rua, endereço...">
+      <img src="images/glass.png">
       <h4><b>Mais pesquisados:</b> <b class="italic">Higienópolis | Penha | Alphaville | Lapa</b></h4>
     </div>
 
