chamada https do mapa

--- a/map.html
+++ b/map.html
@@ -61,7 +61,7 @@
     <div id="map"></div>
     <script src="scripts/map.js"></script>
     <script async defer
-    src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAQ2acXgmsIhkEqoD1o3_ZU4rtdNP1M66I&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQ2acXgmsIhkEqoD1o3_ZU4rtdNP1M66I&callback=initMap">
     </script>
     <!-- Fim do Mapa -->
 
