--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <!-- modified CSS -->
-    <link href="style.css" rel="stylesheet">
+    <link href="styles/default.css" rel="stylesheet">
   </head>
 
   <body>
