--- a/map.html
+++ b/map.html
@@ -27,7 +27,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <!-- modified CSS -->
-    <link href="style.css" rel="stylesheet">
+    <link href="styles/default.css" rel="stylesheet">
   </head>
 
   <body>
@@ -49,7 +49,7 @@
               <li class="presentation"><a href="#">Vai chover?</a></li>
               <li><a href="index.html"><img id="logo" href="/" src="images/logo_alago.png"></a></li>
               <li class="presentation"><a href="#">Sobre</a></li>
-              <li class="presentation"><a href="#">Login</a></li>
+              <li class="presentation"><a href="login.html">Login</a></li>
               <li class="presentation" id="alagou"><a href="#">alagou!</a></li>
             </ul>
           </div>
