update de imagem e inclusão firebase
Adição do script do firebase e atualização de imagem para web

--- a/login.html
+++ b/login.html
@@ -122,6 +122,19 @@
       <div class="col-md-6"></div>
     </div>
 
+    <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyBSlSoszFtsCKSjjrwThh3uohVI2sc2wW8",
+        authDomain: "alago-18a8b.firebaseapp.com",
+        databaseURL: "https://alago-18a8b.firebaseio.com",
+        projectId: "alago-18a8b",
+        storageBucket: "alago-18a8b.appspot.com",
+        messagingSenderId: "587953181865"
+      };
+      firebase.initializeApp(config);
+    </script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
     <!-- Include all compiled plugins (below), or include individual files as needed -->
