Ajuste da lupa do search

--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
 
     <div class="static-map">
       <h3>Descubra os pontos de alagamento próximos de você</h3>
-      <input type="text" class="searchbar" placeholder="Bairro, rua, endereço...">
-      <img src="images/glass.png">
+      <input type="text" class="searchBar" placeholder="Bairro, rua, endereço...">
       <h4><b>Mais pesquisados:</b> <b class="italic">Higienópolis | Penha | Alphaville | Lapa</b></h4>
     </div>
 
