--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
     <link rel="icon" type="image/png" href="images/icon.png" />
 
+    <!-- Font Awesome icons -->
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+
     <!-- Scripts do Firebase -->
     <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
     <script>
@@ -46,6 +49,7 @@
   </head>
 
   <body>
+
     <div class="header row grey">
       <nav class="navbar navbar-default navbar-static-top grey">
         <div class="grey">
@@ -59,14 +63,19 @@
             <img id="logo-mobile-menu" src="images/logo_alago.png">
           </div>
           <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-              <li class="presentation"><a href="map.html">Mapa</a></li>
-              <li class="presentation"><a href="#about">Vai chover?</a></li>
-              <li><a href="index.html"><img id="logo" href="/" src="images/logo_alago.png"></a></li>
-              <li class="presentation"><a href="#">Sobre</a></li>
-              <li class="presentation"><a href="login.html">Login</a></li>
-              <li class="presentation" id="alagou"><a href="#">alagou!</a></li>
+            <ul class="nav navbar-nav alago-links">
+              <li class="logo"><a href="index.html"><img id="logo" href="/" src="images/logo_alago.png"></a></li>
+              <li class="presentation"><a class="link mapa" href="map.html">Mapa</a></li>
+              <li class="presentation"><a class="link vai-chover" href="#about">Vai chover?</a></li>
+              <li class="presentation"><a class="link sobre" href="#">Sobre</a></li>
+              <li class="presentation"><a class="link login" href="login.html">Login</a></li>
+              <!-- <li class="presentation" id="alagou"><a class="btn-alago" href="#">alagou!</a></li> -->
             </ul>
+
+            <ul class="nav navbar-nav alago-button">
+              <li class="presentation" id="alagou"><a class="btn-alago" href="#">alagou!</a></li>
+            </ul>
+
           </div>
         </div>
       </nav>
@@ -126,7 +135,7 @@
 
     <div class="footer row">
       <div class="col-md-6">
-        <img class="logo" src="images/logo_alago.png">
+        <img class="logo" src="images/logo_alago_white.png">
       </div>
       <div class="col-md-6"></div>
     </div>
