--- a/login.html
+++ b/login.html
@@ -47,6 +47,7 @@
   </head>
 
   <body>
+
     <div class="header row grey">
       <nav class="navbar navbar-default navbar-static-top grey">
         <div class="grey">
@@ -60,14 +61,19 @@
             <img id="logo-mobile-menu" src="images/logo_alago.png">
           </div>
           <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-              <li class="presentation"><a href="map.html">Mapa</a></li>
-              <li class="presentation"><a href="#about">Vai chover?</a></li>
-              <li><a href="index.html"><img id="logo" href="/" src="images/logo_alago.png"></a></li>
-              <li class="presentation"><a href="#">Sobre</a></li>
-              <li class="presentation"><a href="#">Login</a></li>
-              <li class="presentation" id="alagou"><a href="#">alagou!</a></li>
+            <ul class="nav navbar-nav alago-links">
+              <li class="logo"><a href="index.html"><img id="logo" href="/" src="images/logo_alago.png"></a></li>
+              <li class="presentation"><a class="link mapa" href="map.html">Mapa</a></li>
+              <li class="presentation"><a class="link vai-chover" href="#">Vai chover?</a></li>
+              <li class="presentation"><a class="link sobre" href="about.html">Sobre</a></li>
+              <li class="presentation"><a class="link login active" href="login.html">Login</a></li>
+              <!-- <li class="presentation" id="alagou"><a class="btn-alago" href="#">alagou!</a></li> -->
             </ul>
+
+            <ul class="nav navbar-nav alago-button">
+              <li class="presentation" id="alagou"><a class="btn-alago" href="#">alagou!</a></li>
+            </ul>
+
           </div>
         </div>
       </nav>
