--- a/map.html
+++ b/map.html
@@ -9,6 +9,24 @@
 
     <link rel="icon" type="image/png" href="images/icon.png" />
 
+    <!-- Font Awesome icons -->
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+
+    <!-- Scripts do Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyBSlSoszFtsCKSjjrwThh3uohVI2sc2wW8",
+        authDomain: "alago-18a8b.firebaseapp.com",
+        databaseURL: "https://alago-18a8b.firebaseio.com",
+        projectId: "alago-18a8b",
+        storageBucket: "alago-18a8b.appspot.com",
+        messagingSenderId: "587953181865"
+      };
+      firebase.initializeApp(config);
+    </script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Bootstrap -->
     <!-- Latest compiled and minified CSS -->
@@ -31,6 +49,7 @@
   </head>
 
   <body>
+
     <div class="header row grey">
       <nav class="navbar navbar-default navbar-static-top grey">
         <div class="grey">
@@ -44,14 +63,19 @@
             <img id="logo-mobile-menu" src="images/logo_alago.png">
           </div>
           <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-              <li class="presentation"><a href="#">Mapa</a></li>
-              <li class="presentation"><a href="#">Vai chover?</a></li>
-              <li><a href="index.html"><img id="logo" href="/" src="images/logo_alago.png"></a></li>
-              <li class="presentation"><a href="#">Sobre</a></li>
-              <li class="presentation"><a href="login.html">Login</a></li>
-              <li class="presentation" id="alagou"><a href="#">alagou!</a></li>
+            <ul class="nav navbar-nav alago-links">
+              <li class="logo"><a href="index.html"><img id="logo" href="/" src="images/logo_alago.png"></a></li>
+              <li class="presentation"><a class="link mapa active" href="#">Mapa</a></li>
+              <li class="presentation"><a class="link vai-chover" href="#">Vai chover?</a></li>
+              <li class="presentation"><a class="link sobre" href="about.html">Sobre</a></li>
+              <li class="presentation"><a class="link login" href="login.html">Login</a></li>
+              <!-- <li class="presentation" id="alagou"><a class="btn-alago" href="#">alagou!</a></li> -->
             </ul>
+
+            <ul class="nav navbar-nav alago-button">
+              <li class="presentation" id="alagou"><a class="btn-alago" href="#">alagou!</a></li>
+            </ul>
+
           </div>
         </div>
       </nav>
