escondendo o footer do login

--- a/login.html
+++ b/login.html
@@ -121,12 +121,12 @@
       </div>
     </div>
 
-    <div class="footer row">
+    <!-- <div class="footer row">
       <div class="col-md-6">
         <img class="logo" src="images/logo_alago.png">
       </div>
       <div class="col-md-6"></div>
-    </div>
+    </div> -->
 
     <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
     <script>
