--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
   <body>
 
-    <div class="header row grey">
+    <div class="header grey">
       <nav class="navbar navbar-default navbar-static-top grey">
         <div class="grey">
           <div class="navbar-header">
@@ -66,8 +66,8 @@
             <ul class="nav navbar-nav alago-links">
               <li class="logo"><a href="index.html"><img id="logo" href="/" src="images/logo_alago.png"></a></li>
               <li class="presentation"><a class="link mapa" href="map.html">Mapa</a></li>
-              <li class="presentation"><a class="link vai-chover" href="#about">Vai chover?</a></li>
-              <li class="presentation"><a class="link sobre" href="#">Sobre</a></li>
+              <li class="presentation"><a class="link vai-chover" href="#">Vai chover?</a></li>
+              <li class="presentation"><a class="link sobre" href="about.html">Sobre</a></li>
               <li class="presentation"><a class="link login" href="login.html">Login</a></li>
               <!-- <li class="presentation" id="alagou"><a class="btn-alago" href="#">alagou!</a></li> -->
             </ul>
