--- a/login.html
+++ b/login.html
@@ -48,7 +48,7 @@
 
   <body>
 
-    <div class="header row grey">
+    <div class="header grey">
       <nav class="navbar navbar-default navbar-static-top grey">
         <div class="grey">
           <div class="navbar-header">
@@ -66,13 +66,13 @@
               <li class="presentation"><a class="link mapa" href="map.html">Mapa</a></li>
               <li class="presentation"><a class="link vai-chover" href="#">Vai chover?</a></li>
               <li class="presentation"><a class="link sobre" href="about.html">Sobre</a></li>
-              <li class="presentation"><a class="link login active" href="login.html">Login</a></li>
+              <li class="presentation"><a class="link login active" href="#">Login</a></li>
               <!-- <li class="presentation" id="alagou"><a class="btn-alago" href="#">alagou!</a></li> -->
             </ul>
 
-            <ul class="nav navbar-nav alago-button">
+            <!-- <ul class="nav navbar-nav alago-button">
               <li class="presentation" id="alagou"><a class="btn-alago" href="#">alagou!</a></li>
-            </ul>
+            </ul> -->
 
           </div>
         </div>
