--- a/map.html
+++ b/map.html
@@ -50,7 +50,7 @@
 
   <body>
 
-    <div class="header row grey">
+    <div class="header grey">
       <nav class="navbar navbar-default navbar-static-top grey">
         <div class="grey">
           <div class="navbar-header">
@@ -65,7 +65,7 @@
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav alago-links">
               <li class="logo"><a href="index.html"><img id="logo" href="/" src="images/logo_alago.png"></a></li>
-              <li class="presentation"><a class="link mapa active" href="#">Mapa</a></li>
+              <li class="presentation"><a class="link mapa active" href="map.html">Mapa</a></li>
               <li class="presentation"><a class="link vai-chover" href="#">Vai chover?</a></li>
               <li class="presentation"><a class="link sobre" href="about.html">Sobre</a></li>
               <li class="presentation"><a class="link login" href="login.html">Login</a></li>
