--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="styles/jquery.fullPage.css" />
 		<link rel="stylesheet" type="text/css" href="styles/about.css" />
 		<link rel="icon" type="image/png" href="images/icon.png" />
+		<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 		<style>
 
 
@@ -58,6 +59,22 @@
 			font-size: 1.2em;
 			line-height: 1.6em;
 		}
+		.btn{
+		    background-color: #448aff;
+		    padding: 15px 50px;
+		    border-radius: 25px;
+		    color: #ffffff;
+		    font-size: 22px;
+		    border: 2px solid #448aff;
+	        display: block;
+		    width: 35%;
+		    margin: 0 auto;
+		    margin-top: 30px;
+		}
+		.btn:hover{
+			color: #448aff;
+			background: transparent;
+		}
 
 
 
@@ -100,12 +117,22 @@
 			float: right;
 			height: 100%;
 		}
+		.section0-image img{
+			width: 360px;
+			height: auto!important;
+		}
 
 
 
 
 		/* Section 1
 		* --------------------------------------- */
+		#section1{
+			/*background-image: url('images/map.png');
+			background-size: 100%;
+			background-attachment: fixed;
+			background-repeat: no-repeat;*/
+		}
 		#section1 img{
 			position:absolute;
 			left: 40px;
@@ -114,7 +141,7 @@
 
 		#section1 .box{
 			position: absolute;
-			top: 50%;
+			top: 60%;
 			left: 50%;
 			margin-top: -192px;
 			margin-left: 89px;
@@ -134,6 +161,15 @@
 		}
 		#section1 img{
 			width: 360px;
+		}
+		#section1 .box img{
+			width: 35px;
+			position: initial;
+			left: 0;
+			top: 0;
+		    float: left;
+		    margin-top: -18px;
+		    margin-right: 15px;
 		}
 		/*screen resolutions between 620px and 800px*/
 		@media all and (min-width: 620px) and (max-width: 800px){
@@ -158,20 +194,20 @@
 			z-index: 10;
 		}
 		#iphone2.active{
-			-webkit-transform: translate3d(-134px, 0px, 0px);
-			-moz-transform: translate3d(-134px, 0px, 0px);
-			-ms-transform:translate3d(-134px, 0px, 0px);
-			transform: translate3d(-134px, 0px, 0px);
+			-webkit-transform: translate3d(-10px, 0px, 0px);
+			-moz-transform: translate3d(-10px, 0px, 0px);
+			-ms-transform:translate3d(-10px, 0px, 0px);
+			transform: translate3d(-10px, 0px, 0px);
 		}
 
 		#iphone3{
 			z-index: 12;
 		}
 		#iphone3.active{
-			-webkit-transform: translate3d(213px, 0px, 0px);
-			-moz-transform: translate3d(213px, 0px, 0px);
-			-ms-transform:translate3d(213px, 0px, 0px);
-			transform: translate3d(213px, 0px, 0px);
+			-webkit-transform: translate3d(285px, 0px, 0px);
+			-moz-transform: translate3d(285px, 0px, 0px);
+			-ms-transform:translate3d(285px, 0px, 0px);
+			transform: translate3d(285px, 0px, 0px);
 		}
 
 		#iphone4{
@@ -232,13 +268,27 @@
 			width: 582px;
 		}
 
+		#section2 .fa-car{
+		    float: left;
+		    font-size: 25px;
+		    background: #448aff;
+		    color: #ffffff;
+		    width: 45px;
+		    height: 45px;
+		    text-align: center;
+		    border-radius: 100%;
+		    padding-top: 10px;
+		    margin-right: 10px;
+		    margin-top: -10px;
+		}
+
 		#iphone-yellow{
 			top: -35px;
 			left: -222px;
 		}
 
 		#iphone-red{
-			top: -194px;
+			top: -145px;
 			left: 106px;
 		}
 
@@ -250,6 +300,9 @@
 		#iphone-green{
 			left: 106px;
 			position:absolute;
+		}
+		#iphone-yellow, #iphone-red, #iphone-blue, #iphone-green{
+			width: 360px;
 		}
 
 		#staticImg{
@@ -285,7 +338,7 @@
 				top: 50%;
 		}
 		#staticImg.moveDown img{
-			top: 155px;
+			top: 25px;
 		}
 
 		#staticImg.active .imgsContainer{
@@ -304,18 +357,59 @@
 		/* Section 3
 		* --------------------------------------- */
 		#section3 .imgsContainer{
+			float: left;
 			top: 50%;
 		}
-
+		#section3 .wrap{
+		    float: right;
+    		width: 57%;
+		}
 		#section3 img{
 			top: 155px;
 			left: 455px;
 			position: absolute;
 		}
 		#section3 .box{
-			text-align: center;
-			margin: 10% 0 0 0;
+			text-align: left;
+			margin: 20% 0 0 0;
+			padding-right: 27%;
 		}
+
+
+
+		 /* Section4 */
+		 #section4{
+		 	padding: 100px 150px 0;
+		 }
+		 #section4 .box{
+		 	text-align: center;
+		 }
+		 #section4 .box h2{
+		 	font-size: 3em;
+		 	margin-bottom: 25px;
+		 }
+		 #section4 .box a.market{
+		 	display: block;
+		 	margin-top: 100px;
+		 }
+		 #section4 .box a.market img{
+		 	height: 70px;
+		 }
+		 #section4 .wrap{
+		 	height: auto;
+	 	    width: 70%;
+    		float: right;
+		 }
+		 #section4 .imgsContainer{
+
+		 }
+		 #section4 .imgsContainer img{
+		 	width: 360px;
+	 	    position: absolute;
+		    top: 65px;
+		    left: 6%;
+		 }
+
 
 
 
@@ -385,7 +479,7 @@
 		<div id="fullpage">
 			<div id="staticImg">
 				<div class="imgsContainer">
-					<img src="imgs/iphone-green.png" alt="iphone" id="iphone-green" />
+					<img src="images/phone4.png" alt="iphone" id="iphone-green" />
 				</div>
 			</div>
 
@@ -400,20 +494,20 @@
 					<!-- <img src="imgs/iphone1.jpg" alt="iphone" /> -->
 				</div>
 				<div class="section0-image">
-					<img class="phone-about" href="/" src="images/phone.png">
+					<img class="phone-about" href="/" src="images/phone1.png">
 				</div>
 			</div>
 			<div class="section" id="section1">
 				<div class="wrap">
 					<div class="imgsContainer">
-						<img src="images/phone.png" alt="iphone" id="iphone2" />
-						<img src="images/phone.png" alt="iphone" id="iphone3" />
+						<img src="images/phone2.png" alt="iphone" id="iphone2" />
+						<img src="images/phone3.png" alt="iphone" id="iphone3" />
 						<!-- <img src="images/phone.png" alt="iphone" id="iphone4" /> -->
 					</div>
 
 					<div class="box">
-						<h2>Onde você estiver</h2>
-						Com a plataforma <strong>Alago</strong> você monitora seus pontos favoritos de onde estiver e recebe notificação de alterações de risco.
+						<img src="images/pin.png" /><h2>Favoritos</h2>
+						Com os <strong>Favoritos</strong> você adiciona e monitora seus pontos principais de onde estiver e fica atualizado em tempo real.
 					</div>
 				</div>
 			</div>
@@ -421,28 +515,41 @@
 			<div class="section moveDown" id="section2">
 				<div class="wrap">
 					<div class="imgsContainer">
-						<img src="imgs/iphone-yellow.png" alt="iphone" id="iphone-yellow" />
-						<img src="imgs/iphone-red.png" alt="iphone" id="iphone-red" />
-						<img src="imgs/iphone-blue.png" alt="iphone" id="iphone-blue" />
+						<!-- <img src="images/phone1.png" alt="iphone" id="iphone-yellow" /> -->
+						<img src="images/phone5.png" alt="iphone" id="iphone-red" />
+						<!-- <img src="images/phone5.png" alt="iphone" id="iphone-blue" /> -->
 					</div>
 
 					<div class="box">
-						<h2>Amazing stuff</h2>
-						Combining <strong>fullPage.js</strong> with your own CSS styles and animations, you will be able to create something remarkable.
+						<i class="fa fa-car" aria-hidden="true"></i><h2>Estacionamento Seguro</h2>
+						Com o <strong>Estacionamento Seguro</strong> você estaciona seu carro e é avisado com antecedência caso seu carro corra algum risco de alagamento.
 					</div>
 				</div>
 			</div>
 			<div class="section moveDown" id="section3">
 				<div class="wrap">
 					<div class="box">
-						<h2>Just a demo</h2>
-						This is, of course, just a demo. I didn't want to spend much time on it.
-						Don't expect it to work perfectly in all kind of screens.
-						It has been designed to work on 1180px width or over on modern browsers with CSS3.
+						<h2>Colaborativo</h2>
+						Com o nosso sistema <strong>Colaborativo</strong> tudo funciona melhor.<br>
+						Diretamente pelo seu celular é possível indicar um novo ponto de ocorrência.<br><br>
+						Simples e fácil.
 					</div>
 				</div>
 				<div class="imgsContainer">
-					<img src="imgs/iphone-two.png" alt="iphone" id="iphone-two" />
+					<!-- <img src="images/phone1.png" alt="iphone" id="iphone-two" /> -->
+				</div>
+			</div>
+			<div class="section moveDown" id="section4">
+				<div class="wrap">
+					<div class="box">
+						<h2>Comece a usar hoje mesmo!</h2>
+						Baixe agora mesmo na App Store ou no nosso <a href="index.html">site</a>.
+						<a class="market" href="#"><img src="images/app_store.png"></a>
+						<a href="index.html" class="btn">Ir para o Site</a>
+					</div>
+				</div>
+				<div class="imgsContainer">
+					<img src="images/phone1.png" alt="iphone" id="iphone-two" />
 				</div>
 			</div>
 		</div>
