--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <img id="logo-mobile-menu" src="images/logo_alago.png">
+            <a href="index.html"><img id="logo-mobile-menu" src="images/logo_alago.png"></a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav alago-links">
