--- a/login.html
+++ b/login.html
@@ -58,7 +58,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <img id="logo-mobile-menu" src="images/logo_alago.png">
+            <a href="index.html"><img id="logo-mobile-menu" src="images/logo_alago.png"></a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav alago-links">
@@ -111,7 +111,7 @@
            <span class="spin"></span>
         </div>
         <div class="input half">
-           <label for="reregpass">Repita a senha</label>
+           <label for="reregpass">Repita a Senha</label>
            <input type="password" name="reregpass" id="reregpass">
            <span class="spin"></span>
         </div>
