--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
     
     <div id="waves">
       <script src="scripts/script_wave.js"></script>
-      <canvas id='wave' width='500' height='200'></canvas>
+      <canvas id='wave' width='100%' height='200'></canvas>
       <script src="scripts/script_wave_2.js"></script>
-      <canvas id='wave2' width='500' height='200'></canvas>
+      <canvas id='wave2' width='100%' height='200'></canvas>
       <script src="scripts/script_wave_3.js"></script>
-      <canvas id='wave3' width='500' height='200'></canvas>
+      <canvas id='wave3' width='100%' height='200'></canvas>
     </div>
     <div class="blue-band"></div>
 
