esclusão da play store

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <b>Baixe nosso app</b>
           <br>
           <a href="#"><img class="app_store" src="images/app_store.png"></a>
-          <a href="#"><img class="play_store" src="images/play_store.png"></a>
+          <!-- <a href="#"><img class="play_store" src="images/play_store.png"></a> -->
         </div>
       </div>
     </div>
