--- a/map.html
+++ b/map.html
@@ -89,6 +89,21 @@
     </script>
     <!-- Fim do Mapa -->
 
+    <div id="subtitle-map" class="row">
+      <div class="col-md-4">
+        <img src="images/sub_block.png">
+        <b>Alagamento forte (bloqueada)</b>
+      </div>
+      <div class="col-md-4">
+        <img src="images/sub_trans.png">
+        <b>Alagamento leve (transitável)</b>
+      </div>
+      <div class="col-md-4">
+        <img src="images/sub_old.png">
+        <b>Alamentos passados</b>
+      </div>
+    </div>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
     <!-- Include all compiled plugins (below), or include individual files as needed -->
