ajuste mapa mobile

--- a/map.html
+++ b/map.html
@@ -104,6 +104,20 @@
       </div>
     </div>
 
+    <div id="subtitle-map-mobile" class="row">
+      <div class="col-xs-4">
+        <img src="images/sub_block.png">
+        <b>Bloqueado</b>
+      </div>
+      <div class="col-xs-4">
+        <img src="images/sub_trans.png">
+        <b>Transitável</b>
+      </div>
+      <div class="col-xs-4">
+        <img src="images/sub_old.png">
+        <b>Passado</b>
+      </div>
+    </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
     <!-- Include all compiled plugins (below), or include individual files as needed -->
