--- a/map.html
+++ b/map.html
@@ -66,7 +66,7 @@
             <ul class="nav navbar-nav alago-links">
               <li class="logo"><a href="index.html"><img id="logo" href="/" src="images/logo_alago.png"></a></li>
               <li class="presentation"><a class="link mapa active" href="map.html">Mapa</a></li>
-              <li class="presentation"><a class="link vai-chover" href="#">Vai chover?</a></li>
+              <li class="presentation"><a class="link vai-chover" href="weather.html">Vai chover?</a></li>
               <li class="presentation"><a class="link sobre" href="about.html">Sobre</a></li>
               <li class="presentation"><a class="link login" href="login.html">Login</a></li>
               <!-- <li class="presentation" id="alagou"><a class="btn-alago" href="#">alagou!</a></li> -->
