Ajustes na previsão
ajustes responsivos

--- a/weather.html
+++ b/weather.html
@@ -67,7 +67,7 @@
             <ul class="nav navbar-nav alago-links">
               <li class="logo"><a href="index.html"><img id="logo" href="/" src="images/logo_alago.png"></a></li>
               <li class="presentation"><a class="link mapa" href="map.html">Mapa</a></li>
-              <li class="presentation"><a class="link vai-chover active" href="weather.html">Vai chover?</a></li>
+              <li class="presentation"><a class="link vai-chover active" href="#">Vai chover?</a></li>
               <li class="presentation"><a class="link sobre" href="about.html">Sobre</a></li>
               <li class="presentation"><a class="link login" href="login.html">Login</a></li>
               <!-- <li class="presentation" id="alagou"><a class="btn-alago" href="#">alagou!</a></li> -->
@@ -87,8 +87,8 @@
           <input placeholder="Digite um local">
         </div>
         <div class="forecast row">
-          <div class="col-md-12">
-            <img src=""><h3 id="weather-location">--</h3>
+          <div class="location col-md-12">
+            <h3><img src="images/gps_40x40.png"><span id="weather-location">--</span></h3>
           </div>
           <div class="icon col-md-1 col-xs-2"><img id="weather-icon" src=""></div>
           <div class="temp col-md-6">
