update do página inicial

--- a/index.html
+++ b/index.html
@@ -95,21 +95,22 @@
         <h1>Como funciona</h1>
         <div class="col-md-2"><img src="images/icon_pin.png"></div>
         <div class="col-md-10">
-          <b class="icon_pin-text">MAPAS - ipsum dolor sit amet, consectetur adipiscing elit. Curabitur et
-          urna arcu. In eleifend nec sapien in blandit. Maecenas leo risus,
-          venenatis sit amet metus nec, vulputate efficitur urna.</b>
-        </div>
-        <div class="col-md-2"><img src="images/star.png"></div>
-        <div class="col-md-10">
-          <b class="icon_star-text">FAVORITOS - ipsum dolor sit amet, consectetur adipiscing elit. Curabitur et
-          urna arcu. In eleifend nec sapien in blandit. Maecenas leo risus,
-          venenatis sit amet metus nec, vulputate efficitur urna.</b>
+          <b class="icon_pin-text">Descubra os pontos de alagamento do seu trajeto!
+          Desvie do congestionamento causado pelas enchentes.
+          Diferente dos atuais serviços de rota, nossa plataforma mostra onde está alagado e qual é a situação do local.
+          Pontos vermelhos são vias bloqueadas e os pontos azuis indicam as vias transitáveis.
+          O serviço é colaborativo. Você pode cadastrar novos pontos de alagamento e atualizar a situação do local.</b>
         </div>
         <div class="col-md-2"><img src="images/icon_alert.png"></div>
         <div class="col-md-10">
-          <b class="icon_alert-text">ALERTAS - ipsum dolor sit amet, consectetur adipiscing elit. Curabitur et
-          urna arcu. In eleifend nec sapien in blandit. Maecenas leo risus,
-          venenatis sit amet metus nec, vulputate efficitur urna.</b>
+          <b class="icon_alert-text">Fuja da enchente antes que o seu carro fique alagado.
+          Com o Estacionamento Seguro, você é avisado caso seu carro esteja em local com risco de alagamento.
+          Programe alertas para receber notificações sobre novos pontos de enchente.  </b>
+        </div>
+        <div class="col-md-2"><img src="images/star.png"></div>
+        <div class="col-md-10">
+          <b class="icon_star-text">É só chover que São Paulo fica cheia de alagamentos.
+          Fique atualizado em tempo real. Salve e acesse em um clique os seus locais favoritos.</b>
         </div>
       </div>
       <div class="col-md-12 app">
