update do texto inicial

--- a/index.html
+++ b/index.html
@@ -97,9 +97,7 @@
         <div class="col-md-10">
           <b class="icon_pin-text">Descubra os pontos de alagamento do seu trajeto!
           Desvie do congestionamento causado pelas enchentes.
-          Diferente dos atuais serviços de rota, nossa plataforma mostra onde está alagado e qual é a situação do local.
-          Pontos vermelhos são vias bloqueadas e os pontos azuis indicam as vias transitáveis.
-          O serviço é colaborativo. Você pode cadastrar novos pontos de alagamento e atualizar a situação do local.</b>
+          Você pode cadastrar novos pontos de alagamento e atualizar a situação do local.</b>
         </div>
         <div class="col-md-2"><img src="images/icon_alert.png"></div>
         <div class="col-md-10">
