update do texto (contra vontade da pati)

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         <h1>Como funciona</h1>
         <div class="col-md-2"><img src="images/icon_pin.png"></div>
         <div class="col-md-10">
-          <b class="icon_pin-text">Descubra os pontos de alagamento do seu trajeto!
-          Desvie do congestionamento causado pelas enchentes.
+          <b class="icon_pin-text">Descubra os pontos de alagamento do seu trajeto e 
+          desvie do congestionamento causado pelas enchentes.
           Você pode cadastrar novos pontos de alagamento e atualizar a situação do local.</b>
         </div>
         <div class="col-md-2"><img src="images/icon_alert.png"></div>
