update do texto

--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@
         </div>
         <div class="col-md-2"><img src="images/icon_alert.png"></div>
         <div class="col-md-10">
-          <b class="icon_alert-text">Fuja da enchente antes que o seu carro fique alagado.
-          Com o Estacionamento Seguro, você é avisado caso seu carro esteja em local com risco de alagamento.
-          Programe alertas para receber notificações sobre novos pontos de enchente.  </b>
+          <b class="icon_alert-text">Com o Estacionamento Seguro, você é avisado caso seu carro esteja 
+            em local com risco de alagamento.
+            Programe alertas para receber notificações sobre novos pontos de enchente.  </b>
         </div>
         <div class="col-md-2"><img src="images/star.png"></div>
         <div class="col-md-10">
-          <b class="icon_star-text">É só chover que São Paulo fica cheia de alagamentos.
-          Fique atualizado em tempo real. Salve e acesse em um clique os seus locais favoritos.</b>
+          <b class="icon_star-text">Adicione aos favoritos pontos que fazem parte da sua rotina e nunca 
+          mais seja surpreendido pelas enchentes em São Paulo.</b>
         </div>
       </div>
       <div class="col-md-12 app">
