--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Alago</title>
 
     <link rel="icon" type="image/png" href="images/icon.png" />
+    <link rel="apple-touch-icon-precomposed" href="images/icon.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/icon.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/icon.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/icon.png" />
 
     <!-- Font Awesome icons -->
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
