update de referência de ícone apple shortcut

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
     <link rel="icon" type="image/png" href="images/icon.png" />
     <link rel="apple-touch-icon-precomposed" href="images/icon.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/icon.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/icon.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/icon.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/icon_72x72.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/icon_114x114.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/icon_144x144.png" />
 
     <!-- Font Awesome icons -->
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
