--- a/weather.html
+++ b/weather.html
@@ -120,7 +120,7 @@
     </script>
     <!-- Fim do Mapa -->
 
-    <div class="footer navbar-fixed-bottom row">
+    <div class="footer row">
       <div class="col-md-6">
         <img class="logo" src="images/logo_alago_white.png">
       </div>
